Sigil 0.6.0 TBA 
    - Implement issue 1590: Insert image should allow insert from disk.
    - Implement issue 1557: Sigil requires Qt 4.8 or above.
    - Implement issue 1586: Spellcheck should allow setting a keyboard shortcut for Ignore Word to speed editing.
    - Implement issue 1585: Spellcheck should have a menu entry to clear all ignored words.
    - Implement issue 1584: Sigil should allow CSS file to be edited while viewing HTML.
    - Implement issue 1583: Sigil should remember the current view state when it restarts.
    - Implement issue 1573: Improve performance of bulk rename.
    - Implement issue 1468: Allow images to be opened externally.
    - Implement issue 1571: Display whether classes are used in the HTML or CSS files in a new Reports dialog.
    - Implement issue 1572: Add feature to re-format CSS files
    - Implement issue 1567: Remove XPGT support.
    - Implement issue 755: Support 'code view' for svg images that are loaded as separate files.
    - Implement issue 1561: Add Save A Copy option to save file under a different name without renaming current file.
    - Implement issue 1559: Add option to insert special characters into document.
    - Implement issue 1333: Add Hyperlink editor buttons to select target from existing ids and set id anchor.
    - Implement issue 401: Add edit buttons for Uppercase, Lowercase, Propercase, Capitization.
    - Implement issue 985: Sigil fonts should be configurable in Preferences.
    - Implement issue 1248: Code View/CSS should allow colors to be configurable in Preferences.
    - Implement issue 1153: Highlighted Text in Code view Difficult/Impossible to see.
    - Implement issue 1511: Prompt to replace an image when adding an image that already exists in the book.
    - Implement issue 1542: Add a Go to Style option to jump to the CSS class used by a tag.
    - Implement issue 1541: Heading styles should optionally remove/keep attributes in tags.