@@ -52,16 +52,17 @@ public:
      */
     enum ResourceType
     {
-        GenericResourceType = 1 <<  0, /**< A \em vulgaris resource; used for Misc resources. */
-        TextResourceType    = 1 <<  1, /**< Used for Text resources, but \em not HTML files. */
-        XMLResourceType     = 1 <<  2, /**< Used for Text resources, but \em not HTML files. */
-        HTMLResourceType    = 1 <<  3, /**< Used for pure (X)HTML resources. */
-        CSSResourceType     = 1 <<  4, /**< Used for CSS resources (stylesheets). */
-        ImageResourceType   = 1 <<  5, /**< Used for image resource, of all types. */
-        SVGResourceType     = 1 <<  6, /**< Used for SVG image resources. */
-        FontResourceType    = 1 <<  7, /**< Used for font resources, both TTF and OTF. */
-        OPFResourceType     = 1 <<  8, /**< Used for the OPF document. */
-        NCXResourceType     = 1 <<  9  /**< Used for the NCX table of contents. */
+        GenericResourceType  = 1 <<  0, /**< A \em vulgaris resource; used for Misc resources. */
+        TextResourceType     = 1 <<  1, /**< Used for Text resources, but \em not HTML files. */
+        XMLResourceType      = 1 <<  2, /**< Used for Text resources, but \em not HTML files. */
+        HTMLResourceType     = 1 <<  3, /**< Used for pure (X)HTML resources. */
+        CSSResourceType      = 1 <<  4, /**< Used for CSS resources (stylesheets). */
+        ImageResourceType    = 1 <<  5, /**< Used for image resource, of all types. */
+        SVGResourceType      = 1 <<  6, /**< Used for SVG image resources. */
+        FontResourceType     = 1 <<  7, /**< Used for font resources, both TTF and OTF. */
+        OPFResourceType      = 1 <<  8, /**< Used for the OPF document. */
+        NCXResourceType      = 1 <<  9, /**< Used for the NCX table of contents. */
+        MiscTextResourceType = 1 <<  10 /**< Used for editable text resource. */
     };
 
     /**
